// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`search/composer.tsx snapshots > renders the destination field active — no current-position row 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 12,
          "paddingBottom": 12,
          "paddingHorizontal": 16,
        },
        {
          "paddingTop": 8,
        },
      ]
    }
  >
    <TouchableOpacity
      accessibilityLabel="common:actions.back"
      accessibilityRole="button"
      hitSlop={8}
      onPress={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 20,
            "elevation": 2,
            "height": 40,
            "justifyContent": "center",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.1,
            "shadowRadius": 6,
            "width": 40,
          },
          {
            "backgroundColor": "#FFFFFF",
            "shadowColor": "#14201B",
          },
        ]
      }
    >
      <Ionicons
        color="#14201B"
        name="arrow-back"
        size={20}
      />
    </TouchableOpacity>
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontSize": 24,
            "fontWeight": "600",
            "lineHeight": 28.799999999999997,
          },
          {
            "color": "#14201B",
            "textAlign": undefined,
            "writingDirection": "ltr",
          },
          {
            "flex": 1,
            "textAlign": "center",
          },
        ]
      }
    >
      search:composer.searchDestination
    </Text>
    <View
      style={
        {
          "width": 40,
        }
      }
    />
  </View>
  <View
    style={
      {
        "flex": 1,
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 8,
            "height": 52,
            "paddingHorizontal": 12,
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E4EDFB",
          },
        ]
      }
    >
      <Ionicons
        accessibilityElementsHidden={true}
        color="#5B6572"
        importantForAccessibility="no-hide-descendants"
        name="search"
        size={20}
      />
      <TextInput
        autoFocus={true}
        onChangeText={[Function]}
        placeholder="search:composer.searchDestination"
        placeholderTextColor="#8B93A3"
        returnKeyType="search"
        style={
          [
            {
              "flex": 1,
              "fontSize": 16,
              "padding": 0,
            },
            {
              "color": "#14201B",
            },
          ]
        }
        value=""
      />
    </View>
    <View
      style={
        {
          "marginTop": 8,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 12,
              "fontWeight": "400",
              "lineHeight": 18,
            },
            {
              "color": "#8B93A3",
              "textAlign": undefined,
              "writingDirection": "ltr",
            },
            {
              "letterSpacing": 0.6,
              "marginBottom": 8,
              "marginTop": 16,
            },
          ]
        }
      >
        SEARCH:COMPOSER.SAVEDPLACES
      </Text>
      <View
        style={
          {
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <TouchableOpacity
          accessibilityState={
            {
              "disabled": true,
            }
          }
          disabled={true}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 12,
                "borderWidth": 1,
                "flex": 1,
                "flexDirection": "row",
                "gap": 8,
                "padding": 8,
              },
              {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#E4EDFB",
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "borderRadius": 16,
                  "height": 32,
                  "justifyContent": "center",
                  "width": 32,
                },
                {
                  "backgroundColor": "#E4EDFB",
                },
              ]
            }
          >
            <Ionicons
              accessibilityElementsHidden={true}
              color="#D3E1F5"
              importantForAccessibility="no-hide-descendants"
              name="briefcase-outline"
              size={20}
            />
          </View>
          <View
            style={
              {
                "flex": 1,
                "gap": 1,
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "fontSize": 14,
                    "fontWeight": "400",
                    "lineHeight": 21,
                  },
                  {
                    "color": "#8B93A3",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  undefined,
                ]
              }
            >
              search:composer.work
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "400",
                    "lineHeight": 18,
                  },
                  {
                    "color": "#8B93A3",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  undefined,
                ]
              }
            >
              common:status.comingSoon
            </Text>
          </View>
        </TouchableOpacity>
        <TouchableOpacity
          accessibilityState={
            {
              "disabled": true,
            }
          }
          disabled={true}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 12,
                "borderWidth": 1,
                "flex": 1,
                "flexDirection": "row",
                "gap": 8,
                "padding": 8,
              },
              {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#E4EDFB",
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "borderRadius": 16,
                  "height": 32,
                  "justifyContent": "center",
                  "width": 32,
                },
                {
                  "backgroundColor": "#E4EDFB",
                },
              ]
            }
          >
            <Ionicons
              accessibilityElementsHidden={true}
              color="#D3E1F5"
              importantForAccessibility="no-hide-descendants"
              name="home-outline"
              size={20}
            />
          </View>
          <View
            style={
              {
                "flex": 1,
                "gap": 1,
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "fontSize": 14,
                    "fontWeight": "400",
                    "lineHeight": 21,
                  },
                  {
                    "color": "#8B93A3",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  undefined,
                ]
              }
            >
              search:composer.home
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "400",
                    "lineHeight": 18,
                  },
                  {
                    "color": "#8B93A3",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  undefined,
                ]
              }
            >
              common:status.comingSoon
            </Text>
          </View>
        </TouchableOpacity>
      </View>
    </View>
    <Text
      style={
        [
          {
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 18,
          },
          {
            "color": "#8B93A3",
            "textAlign": undefined,
            "writingDirection": "ltr",
          },
          {
            "letterSpacing": 0.6,
            "marginBottom": 8,
            "marginTop": 16,
          },
        ]
      }
    >
      SEARCH:COMPOSER.RECENTSECTIONLABEL
    </Text>
    <View
      style={
        [
          {
            "borderRadius": 16,
            "flex": 1,
            "overflow": "hidden",
          },
          {
            "backgroundColor": "#FFFFFF",
          },
        ]
      }
    >
      <FlatList>
        <Text
          style={
            [
              {
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              {
                "color": "#8B93A3",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              {
                "marginTop": 20,
                "textAlign": "center",
              },
            ]
          }
        >
          search:composer.noRecents
        </Text>
      </FlatList>
    </View>
  </View>
</View>
`;

exports[`search/composer.tsx snapshots > renders the origin field active — title, current-position row, saved places, recents 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 12,
          "paddingBottom": 12,
          "paddingHorizontal": 16,
        },
        {
          "paddingTop": 8,
        },
      ]
    }
  >
    <TouchableOpacity
      accessibilityLabel="common:actions.back"
      accessibilityRole="button"
      hitSlop={8}
      onPress={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 20,
            "elevation": 2,
            "height": 40,
            "justifyContent": "center",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.1,
            "shadowRadius": 6,
            "width": 40,
          },
          {
            "backgroundColor": "#FFFFFF",
            "shadowColor": "#14201B",
          },
        ]
      }
    >
      <Ionicons
        color="#14201B"
        name="arrow-back"
        size={20}
      />
    </TouchableOpacity>
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontSize": 24,
            "fontWeight": "600",
            "lineHeight": 28.799999999999997,
          },
          {
            "color": "#14201B",
            "textAlign": undefined,
            "writingDirection": "ltr",
          },
          {
            "flex": 1,
            "textAlign": "center",
          },
        ]
      }
    >
      search:composer.searchPickup
    </Text>
    <View
      style={
        {
          "width": 40,
        }
      }
    />
  </View>
  <View
    style={
      {
        "flex": 1,
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 8,
            "height": 52,
            "paddingHorizontal": 12,
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E4EDFB",
          },
        ]
      }
    >
      <Ionicons
        accessibilityElementsHidden={true}
        color="#5B6572"
        importantForAccessibility="no-hide-descendants"
        name="search"
        size={20}
      />
      <TextInput
        autoFocus={true}
        onChangeText={[Function]}
        placeholder="search:composer.searchPickup"
        placeholderTextColor="#8B93A3"
        returnKeyType="search"
        style={
          [
            {
              "flex": 1,
              "fontSize": 16,
              "padding": 0,
            },
            {
              "color": "#14201B",
            },
          ]
        }
        value=""
      />
    </View>
    <TouchableOpacity
      activeOpacity={0.7}
      disabled={false}
      onPress={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "paddingVertical": 12,
          },
          false,
        ]
      }
    >
      <Ionicons
        accessibilityElementsHidden={true}
        color="#4A7C8C"
        importantForAccessibility="no-hide-descendants"
        name="locate"
        size={20}
      />
      <Text
        style={
          [
            {
              "fontSize": 14,
              "fontWeight": "500",
              "lineHeight": 21,
            },
            {
              "color": "#14201B",
              "textAlign": undefined,
              "writingDirection": "ltr",
            },
            undefined,
          ]
        }
      >
        search:composer.myLocation
      </Text>
    </TouchableOpacity>
    <View
      style={
        {
          "marginTop": 8,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 12,
              "fontWeight": "400",
              "lineHeight": 18,
            },
            {
              "color": "#8B93A3",
              "textAlign": undefined,
              "writingDirection": "ltr",
            },
            {
              "letterSpacing": 0.6,
              "marginBottom": 8,
              "marginTop": 16,
            },
          ]
        }
      >
        SEARCH:COMPOSER.SAVEDPLACES
      </Text>
      <View
        style={
          {
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <TouchableOpacity
          accessibilityState={
            {
              "disabled": true,
            }
          }
          disabled={true}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 12,
                "borderWidth": 1,
                "flex": 1,
                "flexDirection": "row",
                "gap": 8,
                "padding": 8,
              },
              {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#E4EDFB",
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "borderRadius": 16,
                  "height": 32,
                  "justifyContent": "center",
                  "width": 32,
                },
                {
                  "backgroundColor": "#E4EDFB",
                },
              ]
            }
          >
            <Ionicons
              accessibilityElementsHidden={true}
              color="#D3E1F5"
              importantForAccessibility="no-hide-descendants"
              name="briefcase-outline"
              size={20}
            />
          </View>
          <View
            style={
              {
                "flex": 1,
                "gap": 1,
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "fontSize": 14,
                    "fontWeight": "400",
                    "lineHeight": 21,
                  },
                  {
                    "color": "#8B93A3",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  undefined,
                ]
              }
            >
              search:composer.work
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "400",
                    "lineHeight": 18,
                  },
                  {
                    "color": "#8B93A3",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  undefined,
                ]
              }
            >
              common:status.comingSoon
            </Text>
          </View>
        </TouchableOpacity>
        <TouchableOpacity
          accessibilityState={
            {
              "disabled": true,
            }
          }
          disabled={true}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 12,
                "borderWidth": 1,
                "flex": 1,
                "flexDirection": "row",
                "gap": 8,
                "padding": 8,
              },
              {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#E4EDFB",
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "borderRadius": 16,
                  "height": 32,
                  "justifyContent": "center",
                  "width": 32,
                },
                {
                  "backgroundColor": "#E4EDFB",
                },
              ]
            }
          >
            <Ionicons
              accessibilityElementsHidden={true}
              color="#D3E1F5"
              importantForAccessibility="no-hide-descendants"
              name="home-outline"
              size={20}
            />
          </View>
          <View
            style={
              {
                "flex": 1,
                "gap": 1,
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "fontSize": 14,
                    "fontWeight": "400",
                    "lineHeight": 21,
                  },
                  {
                    "color": "#8B93A3",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  undefined,
                ]
              }
            >
              search:composer.home
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "400",
                    "lineHeight": 18,
                  },
                  {
                    "color": "#8B93A3",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  undefined,
                ]
              }
            >
              common:status.comingSoon
            </Text>
          </View>
        </TouchableOpacity>
      </View>
    </View>
    <Text
      style={
        [
          {
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 18,
          },
          {
            "color": "#8B93A3",
            "textAlign": undefined,
            "writingDirection": "ltr",
          },
          {
            "letterSpacing": 0.6,
            "marginBottom": 8,
            "marginTop": 16,
          },
        ]
      }
    >
      SEARCH:COMPOSER.RECENTSECTIONLABEL
    </Text>
    <View
      style={
        [
          {
            "borderRadius": 16,
            "flex": 1,
            "overflow": "hidden",
          },
          {
            "backgroundColor": "#FFFFFF",
          },
        ]
      }
    >
      <FlatList>
        <Text
          style={
            [
              {
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              {
                "color": "#8B93A3",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              {
                "marginTop": 20,
                "textAlign": "center",
              },
            ]
          }
        >
          search:composer.noRecents
        </Text>
      </FlatList>
    </View>
  </View>
</View>
`;
